fix spacing for right sidebar toggle

--- a/src/oriol_personal_theme/static/css/style.css
+++ b/src/oriol_personal_theme/static/css/style.css
@@ -234,6 +234,7 @@ button.sidebar-toggle {
   margin: 0;
   color: white;
   background: inherit;
+  margin-left: 1rem;
 }
 
 @media (min-width: 1200px) {
@@ -261,6 +262,12 @@ button.sidebar-toggle {
 @media (max-width: 959px) {
   .article-navbar-icon-links {
     display: none;
+  }
+}
+
+@media (max-width: 959px) {
+  button.sidebar-toggle {
+    margin-left: 0;
   }
 }
 
